--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 URL: https://dajmcdon.github.io/smoothqr/
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
