--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(coef,smoothrq)
 S3method(predict,smoothrq)
+export(lagmat)
 export(smooth_rq)
 importFrom(rlang,`%||%`)
 importFrom(stats,coef)
