--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,12 @@
 url: https://dajmcdon.github.io/smoothqr/
 template:
   bootstrap: 5
+  bootswatch: cosmo
+  bslib:
+    pkgdown-nav-height: 100px
+    primary: "#041E42"
+    bg: "#fafafa"
+    fg: "#041E42"
+
+navbar:
+  bg: primary
