--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,11 @@ License: MIT + file LICENSE
 URL: https://dajmcdon.github.io/smoothqr/
 Imports: 
     cli,
-    quantreg,
-    rlang
-Suggests:
     dplyr,
+    quantreg,
+    rlang,
+    tibble
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
