--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://dajmcdon.github.io/smoothqr/
+url: https://dajmcdon.github.io/smoothqr/, https://github.com/dajmcdon/smoothqr/
 template:
   bootstrap: 5
   bootswatch: cosmo
