--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Description: This package estimates multi-reponse quantile regression in
     typical use case would be multi-horizon time-series forecasting
     wherein we believe that the responses should vary smoothly.
 License: MIT + file LICENSE
-URL: https://dajmcdon.github.io/smoothqr/, https://github.com/dajmcdon/smoothqr/
+URL: https://dajmcdon.github.io/smoothqr/,
+    https://github.com/dajmcdon/smoothqr/
+BugReports: https://github.com/dajmcdon/smoothqr/issues/new
 Imports: 
     cli,
     dplyr,
@@ -19,9 +21,10 @@ Imports:
     rlang,
     tibble
 Suggests:
+    ggplot2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
